php-src/tests/classes/constants_visibility_002.exp
string(14) "protectedConst"
string(14) "protectedConst"

Fatal error: Uncaught Error: Cannot access protected const A::protectedConst in %s:14
Stack trace:
#0 %s(14): constant('A::protectedCon...')
#1 {main}
  thrown in %s on line 14